--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top shadow-sm">
   <div class="container">
     <a class="navbar-brand" href="{% url 'inicio' %}">
-      <img src="{% static 'img/logo.svg' %}" alt="Adonai"
+      <img src="{% static 'img/logo.png' %}" alt="Adonai"
            onerror="this.onerror=null;this.src='{% static 'img/logo.png' %}';">
       Adonai
     </a>
