--- a/templates/core/inicio.html
+++ b/templates/core/inicio.html
@@ -26,7 +26,7 @@
     <div class="col-lg-6">
       {% load static %}
       <img class="w-100 rounded-4 shadow"
-           src="{% static 'img/hero-pets.jpg' %}"
+           src="{% static 'img/hero-pets.png' %}"
            alt="Adonai" style="aspect-ratio:16/9;object-fit:cover">
     </div>
   </div>
