--- a/core/templates/core/inicio.html
+++ b/core/templates/core/inicio.html
@@ -15,6 +15,9 @@
         <a href="{% url 'catalogo' %}" class="btn btn-primary btn-lg">
           <i class="bi bi-bag-heart me-2"></i> Ver catálogo
         </a>
+         <a href="{% url 'usuarios:register' %}" class="btn btn-outline-primary btn-lg">
+           <i class="bi bi-person-plus me-2"></i> Registrarse
+         </a>
         <a href="https://wa.me/qr/7EO6S4QUAKTUJ1" class="btn btn-outline-success btn-lg">
           <i class="bi bi-whatsapp me-2"></i> Contáctanos por WhatsApp
         </a>
