--- a/templates/panel/base_panel.html
+++ b/templates/panel/base_panel.html
@@ -49,6 +49,7 @@
     <a href="{% url 'panel:dashboard' %}" class="{% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">Resumen</a>
     <a href="{% url 'panel:inventario_list' %}" class="{% if 'inventario' in request.path %}active{% endif %}">Inventario</a>
     <a href="{% url 'panel:categoria_list' %}" class="{% if 'categorias' in request.path %}active{% endif %}">Categorías</a>
+  <a href="{% url 'panel:empleado_list' %}" class="{% if 'empleados' in request.path %}active{% endif %}">Empleados</a>
     <hr>
     <a href="{% url 'catalogo' %}">Ver Tienda</a>
     {% if request.user.is_authenticated %}
@@ -97,3 +98,4 @@
   </script>
 </body>
 </html>
+ 
