--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 {% block extra_js %}{% endblock %}
+{# Incluir el widget de chat (parcial) para que esté disponible en todas las páginas #}
+{% include 'chat/widget.html' %}
 
 <script>
 // Polling simple para notificaciones de productos nuevos
