--- a/templates/panel/base_panel.html
+++ b/templates/panel/base_panel.html
@@ -50,6 +50,7 @@
     <a href="{% url 'panel:inventario_list' %}" class="{% if 'inventario' in request.path %}active{% endif %}">Inventario</a>
     <a href="{% url 'panel:categoria_list' %}" class="{% if 'categorias' in request.path %}active{% endif %}">Categorías</a>
   <a href="{% url 'panel:empleado_list' %}" class="{% if 'empleados' in request.path %}active{% endif %}">Empleados</a>
+  <a href="{% url 'panel:cliente_list' %}" class="{% if 'clientes' in request.path %}active{% endif %}">Clientes</a>
     <hr>
     <a href="{% url 'catalogo' %}">Ver Tienda</a>
     {% if request.user.is_authenticated %}
