--- a/templates/base.html
+++ b/templates/base.html
@@ -71,10 +71,34 @@
           <i class="bi bi-cart"></i> Carrito
         </a>
 
-        <!-- Registrarse (moved here) -->
-        <a href="{% url 'usuarios:register' %}" class="btn btn-outline-success btn-sm">
-          <i class="bi bi-person-plus"></i> Registrarse
-        </a>
+        {% if request.user.is_authenticated %}
+          <div class="dropdown">
+            <button class="btn btn-outline-secondary btn-sm dropdown-toggle d-flex align-items-center" type="button" id="userMenu" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-person-circle me-1"></i>
+              {% if request.user.first_name or request.user.last_name %}
+                {{ request.user.first_name }} {{ request.user.last_name }}
+              {% else %}
+                {{ request.user.username }}
+              {% endif %}
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+              <li><a class="dropdown-item" href="{% url 'usuarios:perfil' %}">Editar perfil</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <form method="post" action="{% url 'usuarios:logout' %}" class="m-0">
+                  {% csrf_token %}
+                  <input type="hidden" name="next" value="{% url 'inicio' %}">
+                  <button type="submit" class="dropdown-item">Cerrar sesión</button>
+                </form>
+              </li>
+            </ul>
+          </div>
+        {% else %}
+          <!-- Registrarse (moved here) -->
+          <a href="{% url 'usuarios:register' %}" class="btn btn-outline-success btn-sm">
+            <i class="bi bi-person-plus"></i> Registrarse
+          </a>
+        {% endif %}
       </div>
     </div>
   </div>
